// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Article Renders with h2 heading: <h2 class="title" id="testId">Varsle om piggtrådgjerder</h2> 1`] = `
<h2
  class="title h3"
  id="testId"
>
  Varsle om piggtrådgjerder
</h2>
`;

exports[`Card Article Renders: <h3 class="title" id="testId">Varsle om piggtrådgjerder</h3> 1`] = `
<h3
  class="title"
  id="testId"
>
  Varsle om piggtrådgjerder
</h3>
`;
